--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,3 +34,11 @@ body {
 .button-secondary {
   @apply button bg-blue-100 text-blue-500 hover:bg-blue-200;
 }
+
+.cant-attend {
+  @apply bg-red-50 text-red-500;
+}
+
+.can-attend {
+  @apply bg-green-50 text-green-600;
+}
